--- a/views/core/navigation.twig
+++ b/views/core/navigation.twig
@@ -1,4 +1,4 @@
-<div class="navbar navbar-expand-lg navbar-dark fixed-top">
+<div class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
     <div class="container">
         <a class="navbar-brand" href="#">Logo</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-items" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
