--- a/views/pages/products.twig
+++ b/views/pages/products.twig
@@ -4,8 +4,7 @@
 
     {% include '../partials/spinner.twig' %}
 
-    <div class="container">
-        <h3 class="h3">shopping Demo-6</h3>
+    <div class="container products-container">
         <div class="row">
             <div class="col-md-3 col-sm-6">
                 <div class="product-grid">
